--- a/A/Altice/Altice_May2020/ads/P3_SDL_1P_19_1yr/300x250/300x250.html
+++ b/A/Altice/Altice_May2020/ads/P3_SDL_1P_19_1yr/300x250/300x250.html
@@ -23,7 +23,7 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 970px;
+        width: 300px;
         height: 250px;
         font-family: Arial,Helvetica,sans-serif;
         color: #000;
@@ -38,19 +38,12 @@
       .frame > div {
         position: absolute;
       }
-      sup {
-        position: relative;
-        font-size:50%;
-        vertical-align:baseline;
-        top:-0.6em;
-      }
       .frameText {
         font-family: Altice-Bold;
         top:0px;
         left:0px;
         width:inherit;
         height:inherit;
-        line-height:1;
       }
       .frameText > div {
         position: absolute;
@@ -83,17 +76,17 @@
       }
       .bulletedText {
         position: relative;
-        padding-left: 18px;
+        padding-left: 15px;
         font-size: 18px;
-        line-height: 1.05;
-        margin-bottom: 6px;
+        line-height: 0.95;
+        margin-bottom: 5px;
       }
       .bulletedText::before {
         content: '+';
         position: absolute;
-        top: -2px;
+        top: 1px;
         left: 0px;
-        font-size: 18px;
+        font-size: 17px;
         color: #0084d6;
       }
       #cta::before, #introCta::before {
@@ -103,34 +96,45 @@
         left: 2px;
         width: inherit;
         height: inherit;
-        border-radius: 15px;
+        border-radius: 10px;
         box-sizing: content-box;
         background: #f5f4f7;
       }
+      #cta.ctaWhite {
+        background: none !important;
+        border: 2px solid #fff;
+        padding: 0 !important;
+        color: #fff;
+      }
+      #cta.ctaWhite::before {
+        background: none;
+      }
       #cta:hover {
         opacity: 0.7 !important;
-      }      #introCta:hover {
+      }
+      #introCta:hover {
         opacity: 0.7 !important;
       }
-      .white {
-        color:#fff;
-      }
     </style>
-<!-- Start of overrode asset attributes values -->
+  <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1","TEXT","https://ct.tubemogul.com/web/altice/2020-04/AlticeIntroVideo_May2020.mp4");
+amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-04/AlticeIntroVideo_May2020.mp4");
 amo.registerAttribute("ctaText","TEXT","Shop now");
-amo.registerAttribute("frameImage2","IMAGE","970x250_giftCard_Suddenlink.png");
-amo.registerAttribute("frameImage3","IMAGE","970x250_Image03.png");
+amo.registerAttribute("frameImage2","IMAGE","300x250_OPT_1P_39_1yr_Frame02.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
+amo.registerAttribute("frameImage4","IMAGE","300x250_OPT_1P_39_1yr_Frame05.png");
 amo.registerAttribute("frameText1","TEXT","Stay connected<br>on your work day");
 amo.registerAttribute("frameText12","TEXT","and school day");
-amo.registerAttribute("frameText21","TEXT","<div style='top:30px;left:30px;font-size:72px;line-height:1;' class='coloredText'>$100</div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top:100px;left:30px;font-size:44px;line-height:1;'>Amazon.com Gift Card</div>");
-amo.registerAttribute("frameText23","TEXT","<div class='AlticeRegular' style='top:148px;left:30px;font-size:10px;line-height:1.1;'>Restrictions apply, see amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText31","TEXT","<div style='top:30px;left:30px;font-size:26px;line-height:1;'>Internet & TV</div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:58px;left:26px;font-size:76px;line-height:76px;letter-spacing:-2px;' class='coloredText'>$49</div><div style='top:66px;left:164px;font-size:13px;'>99/<br>mo.<br>1 yr.</div><div class='AlticeRegular' style='top:134px;left:30px;font-size:10px;'>Plus taxes, fees & charges</div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' class='bulletedText'>100 Mbps Internet</div><div style='top:56px;left:275px;' class='bulletedText'>Altice One with 200+ channels</div><div style='top:82px;left:275px;' class='bulletedText'>Contract buyout up to $500</div><div style='top:108px;left:275px;' class='bulletedText'>No annual contract</div><div class='AlticeRegular' style='top:140px;left:276px;font-size:10px;'>Wired connection up to 100 Mbps.</div>");
+amo.registerAttribute("frameText21", "TEXT", "<div style='top: 56px;left: 56px;font-size: 18px;line-height:1.1;color: #fff;'>Internet<br>starting at</div>");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 91px;left: 51px;width: 160px;color: #fff;line-height: 1;'><font style='font-size: 59px;'>$19</font><font style='margin-left: 2px;font-size: 10px;display: inline-block;vertical-align: 14px;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: 3px 0 0 6px;font-size: 10px;'>Plus taxes, fees<br>& charges</div></div>");
+amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText31","TEXT","<div style='top:44px;left:21px;'><div class='bulletedText'>Fast & reliable Internet</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top:66px;left:21px;'><div class='bulletedText'>Contract buyout up to $100</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top:88px;left:21px;'><div class='bulletedText'>30-day money-back guarantee</div></div>");
+amo.registerAttribute("frameText41", "TEXT", "<div style='top: 44px;left: 21px;font-size: 18px;line-height:1.1;'>Internet<br>starting at</div>");
+amo.registerAttribute("frameText42", "TEXT", "<div style='top: 80px;left: 17px;width: 160px;line-height: 1;'><font style='font-size: 59px;' class='coloredText'>$19</font><font style='margin-left: 2px;font-size: 10px;display: inline-block;vertical-align: 14px;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: 2px 0 0 5px;font-size: 10px;'>Plus taxes, fees & charges</div></div>");
+amo.registerAttribute("frameText43", "TEXT", "<div style='top: 167px;left: 22px;transform: scale(0.78);transform-origin: top left;'><div class='bulletedText'>No annual contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -156,18 +160,22 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
     <div id="frameText31" class="frameText">!{frameText31}</div>
     <div id="frameText32" class="frameText">!{frameText32}</div>
     <div id="frameText33" class="frameText">!{frameText33}</div>
+    <div id="frameImage4" class="asset frameImage" data-image="frameImage4"></div>
+    <div id="frameText41" class="frameText">!{frameText41}</div>
+    <div id="frameText42" class="frameText">!{frameText42}</div>
+    <div id="frameText43" class="frameText">!{frameText43}</div>
     <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top: 182px;
-          left: 420px;
-          width: 134px;
-          height: 34px;
-          font-size: 22px;
-          overflow: visible;
-          border-radius: 18px;
-          padding: 2px;
-          background-image: linear-gradient(to right, #24d9c3, #0084d6);">
+      style="top: 213px;
+        left: 22px;
+        width: 69px;
+        height: 18px;
+        font-size: 11px;
+        overflow: hidden;
+        border-radius: 10px;
+        padding: 2px;
+        background-image: linear-gradient(to right, #24d9c3, #0084d6);">
     </div>
     <div id="frame1" class="frame"
       style="transform-origin:bottom center;
@@ -176,33 +184,37 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
       background-color:#f5f4f7;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top:10px;left:692px;width:210px;height:210px;"><video muted playsinline autoplay style="width:100%;"></video></div>
+      <div id="frameVideo1" style="top: 0px;left: 73px;width: 150px;height: 150px;"><video muted playsinline autoplay style="width:100%;"></video></div>
       <div id="frameText1" class="text AlticeBold"
         data-text="frameText1"
-        data-style="text-align:left;"
-        style="top: 92px;
-          left: 30px;
-          font-size: 44px;
+        data-style="text-align:center;"
+        style="top: 129px;
+          left: 20px;
+          width: 260px;
+          height: 60px;
+          font-size: 21px;
           line-height: 1;">
       </div>
       <div id="frameText12" class="text AlticeBold"
         data-text="frameText12"
-        data-style="text-align:left;"
-        style="top: 92px;
-          left: 30px;
-          font-size: 44px;
+        data-style="text-align:center;"
+        style="top: 129px;
+          left: 20px;
+          width: 260px;
+          height: 60px;
+          font-size: 21px;
           line-height: 1;">
       </div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top: 182px;
-          left: 420px;
-          width: 134px;
-          height: 34px;
-          font-size: 22px;
-          overflow: visible;
-          border-radius: 18px;
+        style="top: 213px;
+          left: 22px;
+          width: 69px;
+          height: 18px;
+          font-size: 11px;
+          overflow: hidden;
+          border-radius: 10px;
           padding: 2px;
           background-image: linear-gradient(to right, #24d9c3, #0084d6);">
       </div>
@@ -217,7 +229,7 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
   <script type="text/javascript">
     var ad = new Ad({
       root: document.querySelector('#ad'),
-      width: 970,
+      width: 300,
       height: 250,
       borderWidth: 1,
       borderColor: '#000'
@@ -227,8 +239,8 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/970x250_Logo_Suddenlink_Black.png',
-          introLogoImage: 'images/970x250_Logo_Suddenlink_Black.png',
+          logoImage: 'images/300x250_Logo_Suddenlink_Black.png',
+          introLogoImage: 'images/300x250_Logo_Suddenlink_Black.png',
           frameBackground: '1x1.png',
           // ref: 'ref.png',
         },
@@ -241,14 +253,14 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
       }, function(data){
         var adData = data[0], adClickUrl = adData['clickURL'];
         ad.root.addEventListener("click", function(e) {
-          if('button' in e.target.dataset) { } else { amoonAdClick('clickUrl'); } //amoonDynAdClick(adData.feedData, "CLICK", adClickUrl); }
+          if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
         setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
 
         textUpdate();
+        gsap.set('#frameText1,#frameText12', {autoAlpha:0});
         gsap.set('.frameImage', {x:'100%'});
         gsap.set('.frameText, #priceLabel', {x:'-100%'});
-        gsap.set('#frameText1, #frameText12', {autoAlpha:0,x:"0%",y:"0%"});
         var priceFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
@@ -277,7 +289,7 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
         }
-        /*var animateFrame5 = function(flag){
+        var animateFrame5 = function(flag){
           var frameId = 5;
           gsap.set('#frameBackground', {display: 'none'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
@@ -286,19 +298,21 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
         }
         var animateFrame4 = function(flag){
           var frameId = 4;
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[4]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame5}));
-        }*/
-        var animateFrame3 = function(flag){
-          var frameId = 3;
           gsap.set('#frameBackground', {display: 'block'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[3]})
-          //.to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0}));
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[4]})
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
+        }
+        var animateFrame3 = function(flag){
+          var frameId = 3;
+          ad.layers.cta.classList.remove('ctaWhite')
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.3, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
+          ad.layers.cta.classList.add('ctaWhite');
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frameId, {duration:0, onComplete: generalLeftFrameAnimation, onCompleteParams:[frameId]})
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame3}));
