--- a/A/Altice/Altice_May2020/ads/P3_SDL_1P_19_1yr/300x50/300x50_frame3.html
+++ b/A/Altice/Altice_May2020/ads/P3_SDL_1P_19_1yr/300x50/300x50_frame3.html
@@ -23,8 +23,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 970px;
-        height: 250px;
+        width: 300px;
+        height: 50px;
         font-family: Arial,Helvetica,sans-serif;
         color: #000;
       }
@@ -38,19 +38,12 @@
       .frame > div {
         position: absolute;
       }
-      sup {
-        position: relative;
-        font-size:50%;
-        vertical-align:baseline;
-        top:-0.6em;
-      }
       .frameText {
         font-family: Altice-Bold;
         top:0px;
         left:0px;
         width:inherit;
         height:inherit;
-        line-height:1;
       }
       .frameText > div {
         position: absolute;
@@ -67,15 +60,6 @@
         width:inherit;
         height:inherit;
       }
-      .transparent { color:transparent; }
-      .verticalBar {
-        position: absolute;
-        top:0px;
-        width: 7px;
-        height: 58px;
-        background-color: #fff;
-        transform-origin: top center;
-      }
       .coloredText {
         background: linear-gradient(to right, #24d9c3, #0084d6);
         -webkit-background-clip: text;
@@ -83,17 +67,17 @@
       }
       .bulletedText {
         position: relative;
-        padding-left: 18px;
-        font-size: 18px;
-        line-height: 1.05;
-        margin-bottom: 6px;
+        padding-left: 13px;
+        font-size: 14px;
+        line-height: 0.95;
+        margin-bottom: 4px;
       }
       .bulletedText::before {
         content: '+';
         position: absolute;
-        top: -2px;
+        top: 0px;
         left: 0px;
-        font-size: 18px;
+        font-size: 14px;
         color: #0084d6;
       }
       #cta::before, #introCta::before {
@@ -103,34 +87,32 @@
         left: 2px;
         width: inherit;
         height: inherit;
-        border-radius: 15px;
+        border-radius: 10px;
         box-sizing: content-box;
         background: #f5f4f7;
       }
       #cta:hover {
         opacity: 0.7 !important;
-      }      #introCta:hover {
+      }
+      #introCta:hover {
         opacity: 0.7 !important;
       }
-      .white {
-        color:#fff;
-      }
     </style>
-<!-- Start of overrode asset attributes values -->
+  <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1","TEXT","https://ct.tubemogul.com/web/altice/2020-04/AlticeIntroVideo_May2020.mp4");
 amo.registerAttribute("ctaText","TEXT","Shop now");
-amo.registerAttribute("frameImage2","IMAGE","970x250_giftCard_Suddenlink.png");
-amo.registerAttribute("frameImage3","IMAGE","970x250_Image03.png");
-amo.registerAttribute("frameText1","TEXT","Stay connected<br>on your work day");
-amo.registerAttribute("frameText12","TEXT","and school day");
-amo.registerAttribute("frameText21","TEXT","<div style='top:30px;left:30px;font-size:72px;line-height:1;' class='coloredText'>$100</div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top:100px;left:30px;font-size:44px;line-height:1;'>Amazon.com Gift Card</div>");
-amo.registerAttribute("frameText23","TEXT","<div class='AlticeRegular' style='top:148px;left:30px;font-size:10px;line-height:1.1;'>Restrictions apply, see amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText31","TEXT","<div style='top:30px;left:30px;font-size:26px;line-height:1;'>Internet & TV</div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:58px;left:26px;font-size:76px;line-height:76px;letter-spacing:-2px;' class='coloredText'>$49</div><div style='top:66px;left:164px;font-size:13px;'>99/<br>mo.<br>1 yr.</div><div class='AlticeRegular' style='top:134px;left:30px;font-size:10px;'>Plus taxes, fees & charges</div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' class='bulletedText'>100 Mbps Internet</div><div style='top:56px;left:275px;' class='bulletedText'>Altice One with 200+ channels</div><div style='top:82px;left:275px;' class='bulletedText'>Contract buyout up to $500</div><div style='top:108px;left:275px;' class='bulletedText'>No annual contract</div><div class='AlticeRegular' style='top:140px;left:276px;font-size:10px;'>Wired connection up to 100 Mbps.</div>");
+amo.registerAttribute("frameImage2","IMAGE","1x1.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
+amo.registerAttribute("frameText1","TEXT","Stay connected on<br>your <font class='coloredText'>work day</font>");
+amo.registerAttribute("frameText12","TEXT","and <font class='coloredText'>school day</font>");
+amo.registerAttribute("frameText21","TEXT","<div style='top:11px;left:9px;'><div class='bulletedText'>Fast & reliable Internet</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top:28px;left:9px;'><div class='bulletedText'>No annual contract</div></div>");
+amo.registerAttribute("frameText23","TEXT","&nbsp;");
+amo.registerAttribute("frameText31", "TEXT", "<div style='top:3px;left:8px;font-size:14px;'>Internet starting at</div>");
+amo.registerAttribute("frameText32", "TEXT", "<div style='top:18px;left:8px;font-size:13.5px;'><font style='color:#0084d6;'>$19.99</font> mo./1 yr.</div>");
+amo.registerAttribute("frameText33", "TEXT", "<div style='top:35px;left:8px;font-size:10px;' class='AlticeRegular'>Plus taxes, fees & charges</div>");
+amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -147,7 +129,6 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
     </div>
     <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
     <div id="logoImage" class="asset adSizeContainer" data-image="logoImage"></div>
-    <div id="frameBackground" class="asset adSizeContainer" data-image="frameBackground" style="display:none;"></div>
     <div id="frameImage2" class="asset frameImage" data-image="frameImage2"></div>
     <div id="frameText21" class="frameText">!{frameText21}</div>
     <div id="frameText22" class="frameText">!{frameText22}</div>
@@ -156,18 +137,18 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
     <div id="frameText31" class="frameText">!{frameText31}</div>
     <div id="frameText32" class="frameText">!{frameText32}</div>
     <div id="frameText33" class="frameText">!{frameText33}</div>
-    <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top: 182px;
-          left: 420px;
-          width: 134px;
-          height: 34px;
-          font-size: 22px;
-          overflow: visible;
-          border-radius: 18px;
-          padding: 2px;
-          background-image: linear-gradient(to right, #24d9c3, #0084d6);">
+      style="top: 5px;
+        right: 15px;
+        width: 65px;
+        height: 14px;
+        font-size: 10.5px;
+        overflow: hidden;
+        border-radius: 10px;
+        line-height: 0.9;
+        padding: 2px;
+        background-image: linear-gradient(to right, #24d9c3, #0084d6);">
     </div>
     <div id="frame1" class="frame"
       style="transform-origin:bottom center;
@@ -175,39 +156,40 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
       transition:opacity ease-out 0.3s, transform ease-out 0.3s;
       background-color:#f5f4f7;
       opacity:1;">
-      <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top:10px;left:692px;width:210px;height:210px;"><video muted playsinline autoplay style="width:100%;"></video></div>
-      <div id="frameText1" class="text AlticeBold"
+      <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
+      <div id="frameText1" class="text-left AlticeBold"
         data-text="frameText1"
-        data-style="text-align:left;"
-        style="top: 92px;
-          left: 30px;
-          font-size: 44px;
+        style="top: 2px;
+          left: 10px;
+          width: 240px;
+          height: 46px;
+          font-size: 16px;
           line-height: 1;">
       </div>
-      <div id="frameText12" class="text AlticeBold"
+      <div id="frameText12" class="text-left AlticeBold"
         data-text="frameText12"
-        data-style="text-align:left;"
-        style="top: 92px;
-          left: 30px;
-          font-size: 44px;
+        style="top: 5px;
+          left: 8px;
+          width: 200px;
+          height: 40px;
+          font-size: 17px;
           line-height: 1;">
       </div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top: 182px;
-          left: 420px;
-          width: 134px;
-          height: 34px;
-          font-size: 22px;
-          overflow: visible;
-          border-radius: 18px;
+        style="top: 5px;
+          right: 15px;
+          width: 65px;
+          height: 14px;
+          font-size: 10.5px;
+          overflow: hidden;
+          border-radius: 10px;
+          line-height: 0.9;
           padding: 2px;
           background-image: linear-gradient(to right, #24d9c3, #0084d6);">
       </div>
     </div>
-
     <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all 0.5s ease 1s;transition:all 0.5s ease 1s;"></div>
   </div>
   <div id="loadFont" style="width:0;height:0;overflow:hidden;">
@@ -215,10 +197,12 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
     <div class="AlticeBold" style="color:transparent;">AlticeBold</div>
   </div>
   <script type="text/javascript">
+
+
     var ad = new Ad({
       root: document.querySelector('#ad'),
-      width: 970,
-      height: 250,
+      width: 300,
+      height: 50,
       borderWidth: 1,
       borderColor: '#000'
     });
@@ -227,10 +211,9 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/970x250_Logo_Suddenlink_Black.png',
-          introLogoImage: 'images/970x250_Logo_Suddenlink_Black.png',
-          frameBackground: '1x1.png',
-          // ref: 'ref.png',
+          logoImage: 'images/300x50_Logo_Suddenlink_Black.png',
+          introLogoImage: 'images/300x50_Logo_Suddenlink_Black.png',
+          // ref: 'ref4.png',
         },
         beforeLoad: function(data){
           data.map(function(content){
@@ -241,17 +224,17 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
       }, function(data){
         var adData = data[0], adClickUrl = adData['clickURL'];
         ad.root.addEventListener("click", function(e) {
-          if('button' in e.target.dataset) { } else { amoonAdClick('clickUrl'); } //amoonDynAdClick(adData.feedData, "CLICK", adClickUrl); }
+          if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-        setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
 
-        textUpdate();
-        gsap.set('.frameImage', {x:'100%'});
-        gsap.set('.frameText, #priceLabel', {x:'-100%'});
-        gsap.set('#frameText1, #frameText12', {autoAlpha:0,x:"0%",y:"0%"});
+        gsap.set('#frameText1,#frameText12', {autoAlpha:0});
+        gsap.set('.frameImage', {x:'-100%'});
+        gsap.set('.frameText', {y:'100%'});
+        gsap.set('div[id^="frameText"][id$="1"], #priceLabel', {x:'-100%',y:0});
         var priceFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
+          .to('#frameImage'+frame, {x:0,y:0})
+          .to('#frameText'+frame+'1', {delay:-0.3, x:0,y:0})
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0})
           .to('#priceLabel', {delay:-0.2, x:0,y:0});
@@ -265,57 +248,40 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
         }
         var generalFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
+          .to('#frameImage'+frame, {x:0,y:0})
+          .to('#frameText'+frame+'1', {delay:-0.3, x:0,y:0})
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
         }
-        var generalLeftFrameAnimation = function(frame){
-          gsap.set('#frameImage'+frame, {x:'0'});
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .from('#frameImage'+frame, {autoAlpha:0,delay:0.2})
-          .to('#frameText'+frame+'1', {x:0,y:0})
-          .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
-          .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
-        }
-        /*var animateFrame5 = function(flag){
-          var frameId = 5;
-          gsap.set('#frameBackground', {display: 'none'});
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[5]})
-          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', {delay: 2.2, opacity:0});
-        }
+
         var animateFrame4 = function(flag){
           var frameId = 4;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[4]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame5}));
-        }*/
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[4]})
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
+        }
         var animateFrame3 = function(flag){
           var frameId = 3;
-          gsap.set('#frameBackground', {display: 'block'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[3]})
-          //.to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0}));
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalLeftFrameAnimation, onCompleteParams:[frameId]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[frameId]})
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
-          ad.layers.frameVideo1.querySelector('video').onplay = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frameText1', {autoAlpha:1})
-            .to('#frameText1', {autoAlpha:0,delay:2})
-            .to('#frameText12', {autoAlpha:1})
-          }
-          ad.layers.frameVideo1.querySelector('video').onended = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
-          }
+          gsap.set('#frameText1', {x: '0'});
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameText1', {autoAlpha:1})
+          .to('#frameText1', {autoAlpha:0,delay:1.5})
+          .to('#frameText12', {autoAlpha:1})
+          .to('#frame1', (flag==true?{}:{delay:1.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
-        gsap.delayedCall(.8, animateFrame1);
+        if('frame1' in ad.layers) ad.layers.frame1.remove();
+                    gsap.delayedCall(1.2, animateFrame3, [true]);
       });
     }, 2000);
   </script>
