--- a/A/Altice/Altice_May2020/ads/P3_SDL_AO_49_1yr(100Mbps)/970x250/970x250_frame2.html
+++ b/A/Altice/Altice_May2020/ads/P3_SDL_AO_49_1yr(100Mbps)/970x250/970x250_frame2.html
@@ -120,17 +120,17 @@
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
 amo.registerAttribute("frameVideo1","TEXT","https://ct.tubemogul.com/web/altice/2020-04/AlticeIntroVideo_May2020.mp4");
-amo.registerAttribute("ctaText","TEXT","Compra");
+amo.registerAttribute("ctaText","TEXT","Shop now");
 amo.registerAttribute("frameImage2","IMAGE","970x250_giftCard_Suddenlink.png");
 amo.registerAttribute("frameImage3","IMAGE","970x250_Image03.png");
-amo.registerAttribute("frameText1","TEXT","Seguimos conectándote<br>con tu trabajo");
-amo.registerAttribute("frameText12","TEXT","con el día escolar y más");
-amo.registerAttribute("frameText21","TEXT","<div style='top:48px;left:30px;font-size:44px;line-height:1;'>Tarjeta de regalo<br>Amazon.com de <span style='color: #0084d6;'>$100</span></div>");
-amo.registerAttribute("frameText22","TEXT","<div class='AlticeRegular' style='top:140px;left:30px;font-size:10px;line-height:1.1;'>Aplican restricciones. Vea amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top:30px;left:30px;font-size:26px;line-height:1;'>Internet y TV</div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:58px;left:26px;font-size:76px;line-height:76px;letter-spacing:-2px;' class='coloredText'>$54</div><div style='top:66px;left:164px;font-size:13px;'>99/<br>mes<br>1 año</div><div class='AlticeRegular' style='top:134px;left:30px;font-size:10px;'>más tarifas, imptos. y cargos</div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' class='bulletedText'>Internet de 100 megas</div><div style='top:56px;left:275px;' class='bulletedText'>Altice One con más de 200 canales</div><div style='top:82px;left:275px;' class='bulletedText'>Te ayudamos a deshacerte de tu<br>contrato, con hasta $500</div><div style='top:128px;left:275px;' class='bulletedText'>Sin contratos</div><div class='AlticeRegular' style='top:160px;left:275px;font-size:10px;'>Conexión por cable de hasta 100 megas.</div>");
+amo.registerAttribute("frameText1","TEXT","Stay connected<br>on your work day");
+amo.registerAttribute("frameText12","TEXT","and school day");
+amo.registerAttribute("frameText21","TEXT","<div style='top:30px;left:30px;font-size:72px;line-height:1;' class='coloredText'>$100</div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top:100px;left:30px;font-size:44px;line-height:1;'>Amazon.com Gift Card</div>");
+amo.registerAttribute("frameText23","TEXT","<div class='AlticeRegular' style='top:148px;left:30px;font-size:10px;line-height:1.1;'>Restrictions apply, see amazon.com/gc-legal</div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top:30px;left:30px;font-size:26px;line-height:1;'>Internet & TV</div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top:58px;left:26px;font-size:76px;line-height:76px;letter-spacing:-2px;' class='coloredText'>$49</div><div style='top:66px;left:164px;font-size:13px;'>99/<br>mo.<br>1 yr.</div><div class='AlticeRegular' style='top:134px;left:30px;font-size:10px;'>Plus taxes, fees & charges</div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' class='bulletedText'>100 Mbps Internet</div><div style='top:56px;left:275px;' class='bulletedText'>Altice One with 200+ channels</div><div style='top:82px;left:275px;' class='bulletedText'>Contract buyout up to $500</div><div style='top:108px;left:275px;' class='bulletedText'>No annual contract</div><div class='AlticeRegular' style='top:140px;left:276px;font-size:10px;'>Wired connection up to 100 Mbps.</div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
