--- a/M/Microsoft/Microsoft_Work_Remote_Office/ads/160x600/WriterWord/M365_FY20Q4_RemoteWork_GigWorker_USA_160x600_BAN_Writer_EasyRemote_English_NA_NA_SBAN_BN_NA_1.htm
+++ b/M/Microsoft/Microsoft_Work_Remote_Office/ads/160x600/WriterWord/M365_FY20Q4_RemoteWork_GigWorker_USA_160x600_BAN_Writer_EasyRemote_English_NA_NA_SBAN_BN_NA_1.htm
@@ -81,7 +81,7 @@ function handleComplete(evt,comp) {
 				var layers = exportRoot.mainMC;
 				var adWidth = document.querySelector('#animation_container').offsetWidth;
 				var ctaBackgroundColor = layers.cta.children[0].graphics._fill.style;
-				ctaBackgroundColor = '#0078D7';
+				// ctaBackgroundColor = '#0078D7';
 				var ctaWidth = layers.txtCta.children[0].children[0].getBounds().width + 45;
 				layers.txtCta.regX = 0;
 				layers.txtCta.children[0].x = 0;
