--- a/M/Microsoft/Microsoft_Work_Remote_Office/ads/160x600/DesignerPPT/M365_FY20Q4_RemoteWork_GigWorker_USA_160x600_BAN_Designer_EasyRemote_English_NA_NA_SBAN_BN_NA_1.htm
+++ b/M/Microsoft/Microsoft_Work_Remote_Office/ads/160x600/DesignerPPT/M365_FY20Q4_RemoteWork_GigWorker_USA_160x600_BAN_Designer_EasyRemote_English_NA_NA_SBAN_BN_NA_1.htm
@@ -91,9 +91,9 @@ function handleComplete(evt,comp) {
 				layers.cta.scaleX = 1;
 				layers.cta.scaleY = 1;
 				layers.cta.arrow.arrow_1.x = 0;
-				// layers.cta.arrow.arrow_1.y += 1;
+				layers.cta.arrow.arrow_1.y += 1;
 				layers.cta.arrow.arrow.x = 0;
-				// layers.cta.arrow.arrow.y += 1;
+				layers.cta.arrow.arrow.y += 1;
 				layers.cta.arrow.arrow_1.regX = 0;
 				layers.cta.arrow.arrow.regX = 0;
 				layers.cta.arrow.regX = 0;
