--- a/M/Microsoft/Microsoft_Work_Remote_Office/ads/300x250/Teams/O365_FY20Q4_SMB_USA_300x250_BAN_Teams_English_NA_NA_ANI_BN_NA_1.htm
+++ b/M/Microsoft/Microsoft_Work_Remote_Office/ads/300x250/Teams/O365_FY20Q4_SMB_USA_300x250_BAN_Teams_English_NA_NA_ANI_BN_NA_1.htm
@@ -11,7 +11,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>O365_GigWorkers_USA_160x600_BAN_Photographer_OneDrive_English_NA_NA_ANI_BN_NA_1</title>
+<title>O365_FY20Q4_SMB_USA_300x250_BAN_Teams_English_NA_NA_ANI_BN_NA_1</title>
 <style>
 	@font-face {
 		font-family: 'Segoe Pro';
@@ -28,13 +28,13 @@
 <!-- <script>var clickTag = "http://www.google.com";</script>
 <script src="copy.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-<script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-<script src="O365_GigWorkers_USA_160x600_BAN_Photographer_OneDrive_English_NA_NA_ANI_BN_NA_1.js?1501171107836"></script>
-<meta name="ad.size" content="width=160,height=600">
+<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+<script src="depthjs-1.1.3.min.js"></script>
+<script src="O365_FY20Q4_SMB_USA_300x250_BAN_Teams_English_NA_NA_ANI_BN_NA_1.js?1501171107836"></script>
+<meta name="ad.size" content="width=300,height=250">
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation, initReady
 initReady=false
-
 function init() {
 	canvas = document.getElementById("canvas");
 	anim_container = document.getElementById("animation_container");
@@ -60,11 +60,11 @@ function handleComplete(evt,comp) {
 	for(i=0; i<ssMetadata.length; i++) {
 		ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
 	}
-	exportRoot = new lib.O365_GigWorkers_USA_160x600_BAN_Photographer_OneDrive_English_NA_NA_ANI_BN_NA_1();
+	exportRoot = new lib.O365_FY20Q4_SMB_USA_300x250_BAN_Teams_English_NA_NA_ANI_BN_NA_1();
 	stage = new lib.Stage(canvas);
+	stage.addChild(exportRoot);
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
-		stage.addChild(exportRoot);
 		createjs.Ticker.setFPS(lib.properties.fps);
 		createjs.Ticker.addEventListener("tick", stage);
 	}
@@ -110,12 +110,62 @@ function handleComplete(evt,comp) {
         startBanner()
     }
     TweenMax.delayedCall(0.2,function(){
+        var ctaAlignment = function(position){
+			position = position ? position : 'left';
+			var layers = exportRoot.mainMC;
+			var adWidth = document.querySelector('#animation_container').offsetWidth;
+			var ctaBackgroundColor = layers.cta.children[0].graphics._fill.style;
+			var ctaWidth = layers.txtCta.children[0].children[0].getBounds().width + 45;
+			layers.txtCta.regX = 0;
+			layers.txtCta.children[0].x = 0;
+			layers.txtCta.children[0].y += 1;
+			layers.cta.regX = 0;
+			layers.cta.regY = 0;
+			layers.cta.scaleX = 1;
+			layers.cta.scaleY = 1;
+			layers.cta.arrow.arrow_1.x = 0;
+			layers.cta.arrow.arrow.x = 0;
+			layers.cta.arrow.arrow_1.regX = 0;
+			layers.cta.arrow.arrow.regX = 0;
+			layers.cta.arrow.regX = 0;
+			layers.cta.children[0].x = 0;
+			layers.cta.children[0].y = 0;
+			layers.cta.children[0].scaleX = 1;
+			layers.cta.children[0].scaleY = 1;
+			layers.cta.children[0].regX = 0;
+			layers.cta.children[0].regY = 0;
+			layers.cta.children[0].graphics.clear();
+			layers.cta.children[0].graphics.beginFill(ctaBackgroundColor).drawRect(0, -15, ctaWidth, 30);
+			if(position == 'right') {
+				layers.cta.x = adWidth - ctaWidth;
+				layers.txtCta.x = adWidth - ctaWidth + 15;
+				layers.cta.arrow.x = ctaWidth - 20;
+			} else {
+				layers.cta.x = 0;
+				layers.txtCta.x = 15;
+				layers.cta.arrow.x = ctaWidth - 20;
+			}
+		}
         var iframe = window.frameElement;
 		var parentWindow = iframe.contentWindow.parent ? iframe.contentWindow.parent  : iframe.contentWindow;
 		var bannerData = parentWindow.getBannerData();
-		bannerData.headline1 = eval(bannerData.textField1);
-		bannerData.headline2 = eval(bannerData.textField2);
-		bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"12px",0,1,"50","300", "center"] : '';
+		var introText = eval(bannerData.textField1)[0];
+		var introColor = introText.match(/\<(.*?)\>/g)[0];
+		var introContent = introText.split(introColor)[1];
+		var introValues = introContent.split('^');
+		var getValue = function(index) { return eval(bannerData.textField1.split(introContent).join((typeof index != 'undefined' && index in introValues ? introValues[index] : ' '))); }
+		bannerData.headline1 = getValue(0);
+		bannerData.headline2 = getValue(1);
+		bannerData.headline3 = getValue(2);
+		bannerData.headline4 = getValue(3);
+		bannerData.headline5 = getValue();
+		bannerData.headline6 = getValue(4);
+		bannerData.headline7 = getValue();
+		bannerData.headline8 = getValue(5);
+		bannerData.headline9 = getValue();
+		bannerData.headline10 = eval(bannerData.textField2);
+		bannerData.headline11 = eval(bannerData.textField3);
+		bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,(bannerData.ctaText.length >= 15 ? "9px" : "12px"),0,0,"50","300", "center"] : '';
 		animation_container.addEventListener("click", function(){
 			parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl);
 			if(bannerData.clickTracker) {
@@ -136,6 +186,7 @@ function handleComplete(evt,comp) {
 			});
 		}
         exportRoot.initBanner(bannerData)
+        ctaAlignment('left')
         exportRoot.runBanner()
     })
 	initReady=true
@@ -178,10 +229,10 @@ var loadFont = false
 <!-- write your code here -->
 </head>
 <body onload="init();" style="margin:0px;">
-<div id="rHit" style="display:block; position:absolute; top:0px; left:138px; width:22px; height:22px; z-index:100000 !important; cursor:pointer; "></div>
-<div id="animation_container" style="background-color:#0078D4; width:160px; height:600px">
-  <canvas id="canvas" width="160" height="600" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer; "></canvas>
-		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:160px; height:600px; position: absolute; left: 0px; top: 0px; display: block;">
+<div id="rHit" style="display:block; position:absolute; top:0px; left:278px; width:22px; height:22px; z-index:100000 !important; cursor:pointer; "></div>
+<div id="animation_container" style="background-color:#0078D4; width:300px; height:250px">
+  <canvas id="canvas" width="300" height="250" style="position: absolute; display: block; background-color:#FFFFFF; cursor:pointer;" aria-label="Microsoft 3 6 5. Chat, video, phone, cloud storage, project management . Team collaboration elevated .Increase productivity with Microsoft Teams and 1 terabyte of cloud storage per user with Microsoft 3 6 5.  Buy now." role="img"></canvas>
+		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:300px; height:250px; position: absolute; left: 0px; top: 0px; display: block;">
 		<div style="position: absolute; border: 1px solid black; box-sizing: border-box; background-color:transparent; top: 0; left: 0; width: 100%; bottom: 0;"></div>
 		</div>
 	</div>
@@ -193,7 +244,7 @@ var startBanner = function(){
 
 				var rHit = document.getElementById("rHit");
 				rHit.addEventListener("mouseover", rHitOver.bind(this));
-				function rHitOver()  {  exportRoot.mainMC.replay_btn.gotoAndStop(1); }
+				function rHitOver()  {  exportRoot.mainMC.replay_btn.gotoAndStop(1)	}
 
 				rHit.addEventListener("mouseout", rHitOut.bind(this));
 				function rHitOut()   {  exportRoot.mainMC.replay_btn.gotoAndStop(0)	}
@@ -202,6 +253,9 @@ var startBanner = function(){
 				animation_container.addEventListener("mouseover", over.bind(this));
 				function over() {
 				exportRoot.mainMC.cta.arrow.gotoAndStop(1);
+					if (exportRoot.shadowReplay == true){
+									 	exportRoot.mainMC.anim_1.finalman.shadow.gotoAndPlay("loop");
+									 	}
 				}
 
 				animation_container.addEventListener("mouseout", out.bind(this));
