changed header name

--- a/E/Epic/Adventure(ExcelBased)/ads.html
+++ b/E/Epic/Adventure(ExcelBased)/ads.html
@@ -229,7 +229,7 @@
         }
         document.querySelector('#subsubheader').innerHTML = htmlContent;
         htmlContent = '';
-        htmlContent = adContent.data[0].Layout + ' | ' + adContent.data[0].Product + ' | ' + filterString.split('|').join(' | ');
+        htmlContent = adContent.data[0].Layout + ' | ' + adContent.data[0].Resort + ' | ' + filterString.split('|').join(' | ');
         document.querySelector('#title').innerHTML = htmlContent;
         var headers = document.querySelectorAll('#header > div');
         for(var i = 0; i < headers.length; i++) {
