--- a/M/Microsoft/Microsoft_Office_Verde_Creative_Retargeting/ads/728x90/z728x90.html
+++ b/M/Microsoft/Microsoft_Office_Verde_Creative_Retargeting/ads/728x90/z728x90.html
@@ -24,10 +24,10 @@
           return text;
         }
         var contentD = [
-          {
-            "name": "Microsoft",
-            "product_url": "https://office.com/",
-          }
+          { "passthroughfield1": "LEARN MORE1", },
+          { "passthroughfield1": "LEARN MORE2", },
+          { "passthroughfield1": "LEARN MORE3", },
+          { "passthroughfield1": "LEARN MORE", },
         ];
 
         if(contentD && contentD.length) { contentD.forEach(function(data) { amo.registerContent(data); }); }
@@ -37,11 +37,12 @@
         amo.registerVariation("textField3", "na");
         amo.registerVariation("textField4", "na");
         amo.registerVariation("textField5", "na");
-        amo.registerVariation("ctaText", "LEARN MORE");
+        // amo.registerVariation("ctaText", "LEARN MORE");
+        amo.registerVariation("ctaText", "!{passthroughfield1}");
         // amo.registerVariation("ctaArrowVisibleFlag", "!{passthroughfield2}");
         amo.registerVariation("impressionTracker", "../../../../1x1.png?impressionTracker=" + Math.random());
         amo.registerVariation("clickTracker", "../../../../1x1.png?clickTracker=" + Math.random());
-        amo.registerVariation("clickURL", "!{product_url}");
+        amo.registerVariation("clickURL", "https://office.com/");
         amo.registerVariation("dropdownClickURLs", "https://adobe.com/#Microsoft1^https://adobe.com/#Microsoft2^https://adobe.com/#Microsoft3");
         var content = [], cam = {};
         var cam = {
@@ -87,6 +88,7 @@
         window.url1 = adData.dropdownClickURLs.split('^')[0];
         window.url2 = adData.dropdownClickURLs.split('^')[1];
         window.url3 = adData.dropdownClickURLs.split('^')[2];
+        adData.ctaText = content.map(function(data) { return data.ctaText }).join('^');
         // document.querySelector('iframe').addEventListener("click", exitHandler.bind(this));
         // function exitHandler() {
         //   // window.open(clickTag);
