--- a/E/Epic/Adventure(ExcelBased)/ads/320x50/320x50.html
+++ b/E/Epic/Adventure(ExcelBased)/ads/320x50/320x50.html
@@ -400,7 +400,7 @@
             color: #20285d;
             font-size: 50%;
             margin: 0 0.1rem;
-            vertical-align: middle;
+            vertical-align: .30em;
          }
 
          /* EPIC LOGO */
