--- a/E/Epic/Adventure(ExcelBased)/ads/300x250/300x250.html
+++ b/E/Epic/Adventure(ExcelBased)/ads/300x250/300x250.html
@@ -402,7 +402,7 @@
             content: "$";
             color: #20285d;
             font-size: 50%;
-            vertical-align: middle;
+            vertical-align: .30em;
          }
 
          /* EPIC LOGO */
